spec/e2e/field/set_on_type.lit
type Foo {}
Foo.bar = "value"; # error: [line 2] Runtime error: Only instances have fields.
